--- a/Dealing_With_Categorical_Fetures_Titanic_Challenge.ipynb
+++ b/Dealing_With_Categorical_Fetures_Titanic_Challenge.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "ruAB8n42qTz5"
       ],
-      "authorship_tag": "ABX9TyO7L7GuY28+dKc2UTGKvCSj",
+      "authorship_tag": "ABX9TyO4Tje8ZOnAm1KBCWkhO1R3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,15 @@
       },
       "source": [
         "# Tutorial Categorical Features - Titanic Dataset\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "@author: Diogo Telheiro do Nascimento\n",
+        "@publication_date: datetime.datetime(2020, 5, 26, 16, 40)\n",
+        "```\n",
+        "\n",
+        "\n",
         "\n",
         "### Understanding Categorical Features\n",
         "---\n",
